2011-08-02  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-search-thread): Position point on referring article
	line.

	* nnimap.el (nnimap-request-thread): Whitespace fix.

2011-08-02  Steve Purcell  <steve@sanityinc.com>  (tiny change)

	* nnimap.el (nnimap-get-groups): Decode "&" correctly.

2011-08-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* starttls.el (starttls-available-p): Renamed from
	`starttls-any-program-available' and changed return convention.

2011-07-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnmaildir.el (nnmaildir-request-accept-article): Don't call
	`unix-sync' unless it's defined.

2011-07-31  Marcus Harnisch  <marcus.harnisch@gmx.net>  (tiny change)

	* gnus-art.el (gnus-article-stop-animations): Use `elt' instead of
	`aref' for XEmacs compatibiltiy.

2011-07-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* spam.el (spam-fetch-field-fast): Rewrite slightly for clarity.

2011-07-31  Dave Abrahams  <dave@boostpro.com>  (tiny change)

	* gnus-sum.el (gnus-summary-refer-thread): Since lambdas aren't
	closures, quote the form properly (bug#9194).

2011-07-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-insert-new-articles): Clean up slightly.
	(gnus-summary-insert-new-articles): Protect against servers that are
	down.

2011-07-29  Daniel Dehennin  <daniel.dehennin@baby-gnu.org>

	* mm-decode.el (mm-dissect-buffer): Add a default content-disposition
	in mm handle if none is specified.

2011-07-24  Andrew Cohen  <cohen@andy.bu.edu>

	* nnimap.el (nnimap-make-thread-query): Quote message-ids for gmail.

2011-07-23  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-search-thread): New function to make an nnir group
	based on a thread query.

	* gnus-sum.el (gnus-refer-thread-use-nnir): New variable to control use
	of nnir in thread referral.
	(gnus-summary-refer-thread): Use it.

	* nnimap.el (nnimap-request-thread): Use it.

2011-07-20  Lars Magne Ingebrigtsen  <larsi@gnus.org>
